--- a/src/app/academia/home/home.component.html
+++ b/src/app/academia/home/home.component.html
@@ -44,9 +44,12 @@
     <mat-card-header>
       <mat-card-title>Pagos a Profit Takers</mat-card-title>
       <mat-card-subtitle class="subtitle-actions">
-        Por medio de esta opción podrás tomar una foto de tu recibo de pagos para 
-        continuar tu Suscripción o ver el historial de tus pagos realizados.
-        Puedes cargar pagos por concepto de <b>Inversión (Trading)</b> o por concepto de <b>Academia</b>
+        Por medio de esta opción podrás tomar una foto de tu recibo de pago
+        (Transferencia bancaria, consignación o giro) e indicar los datos básicos:
+        Monto, fecha, etc.
+        Puedes cargar pagos por concepto de <b>Inversión (Contratos en Profit Takers)</b> 
+        o por concepto de <b>Academia</b>
+        para continuar tu <b>Suscripción</b> 
         ...
       </mat-card-subtitle>
     </mat-card-header>
