--- a/src/app/academia/pago/pago.component.html
+++ b/src/app/academia/pago/pago.component.html
@@ -86,11 +86,11 @@
             </mat-label>
             <br/><br/>
             <mat-radio-group aria-label="Elija destino de su consignación en Profit Takers" [(ngModel)]="destino" [ngModelOptions]="{standalone: true}">
-              <mat-radio-button value="Inversiones" matTooltip="Será sumado a su disponible para hacer Trading" aria-label="Será sumado a su disponible para hacer Trading"
+              <mat-radio-button value="Inversiones" matTooltip="Será sumado a su disponible para hacer Trading (Movimientos e Inversión)" aria-label="Será sumado a su disponible para hacer Trading"
                matTooltipPosition="below" class="question">
                 <span class="lBlanca">Inversiones (Trading)</span>
               </mat-radio-button>
-              <mat-radio-button value="Academia" matTooltip="Será usado para su pago de Membresía por Suscripción" aria-label="Será usado para su pago de Membresía por Suscripción"
+              <mat-radio-button value="Academia" matTooltip="Será usado para el pago de Membresía por Suscripción" aria-label="Será usado para su pago de Membresía por Suscripción"
                matTooltipPosition="below" class="question">
                 <span class="lBlanca">Academia</span>
               </mat-radio-button>
