--- a/src/app/admin/toolbar-admin/toolbar-admin.component.html
+++ b/src/app/admin/toolbar-admin/toolbar-admin.component.html
@@ -73,7 +73,7 @@
   <button mat-menu-item>Por Cuenta</button>
   <button mat-menu-item>Por Contrato</button>
   <button mat-menu-item (click)="payments()"><!-- [matMenuTriggerFor]="menuAdminPagos" -->
-    Pagos Academia
+    Ver/Certificar Pagos
   </button>
 </mat-menu>
 
