--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -73,9 +73,9 @@
         </mat-card-actions>
       </div>
       <div class="col-md-12 center loginFont">
-        ¿ No tienes cuenta en la Academia Profit ?
-        <br/><br/>
-        <a href (click)="$event.preventDefault();applyForNewUseraccount();">Solicita una aqu&iacute;</a>
+        ¿ No tienes cuenta en Profit Takers ?
+        <br/>
+        <a href (click)="$event.preventDefault();applyForNewUseraccount();" style="color: red;">Solicita una aqu&iacute;</a>
         <br/><br/>
       </div>
     </div>
