--- a/src/app/request-credentials/request-credentials.component.html
+++ b/src/app/request-credentials/request-credentials.component.html
@@ -1,8 +1,8 @@
 <div class="container loginContainer">
   <mat-card class="example-card">
     <mat-card-header>
-      <div class="row justify-content-xs-center">
-        <div class="col-xs-12 center">
+      <div class="row justify-content-sm-center">
+        <div class="col-sm-12 center">
           <div class="avatarFrameOffline">
             <img src="assets/images/logo_negro.png" class="img-fluid login-img" />
           </div>
@@ -13,8 +13,8 @@
     <mat-card-content>
       <form class="full-form profile-form">
 
-        <div class="row justify-content-xs-center">
-          <div class="col-xs-12 center centrado">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center centrado">
             <br/><br/>
             <span class="titulo2">Solicitud de nueva cuenta en Profit Takers</span>
             <br/><br/>
@@ -26,8 +26,8 @@
           </div>
         </div>
 
-        <div class="row justify-content-xs-center">
-          <div class="col-xs-12">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="nombre">Nombres</mat-label>
               <input matInput [(ngModel)]="nombre" type="text" required [ngModelOptions]="{standalone: true}">
@@ -36,8 +36,8 @@
           </div>
         </div>
 
-        <div class="row justify-content-xs-center">
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="apellido">Apellidos</mat-label>
               <input matInput [(ngModel)]="apellido" type="text" required [ngModelOptions]="{standalone: true}">
@@ -46,56 +46,78 @@
           </div>
         </div>
 
-        <div class="row justify-content-xs-center">
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="email">Email (correo electrónico)</mat-label>
-              <input matInput [(ngModel)]="email" type="text" required [ngModelOptions]="{standalone: true}">
+              <input matInput [(ngModel)]="email" type="text" required [ngModelOptions]="{standalone: true}"
+               on-focus="validarUnicoEmail()" on-focusout="validarUnicoEmail()">
               <mat-icon matSuffix>email</mat-icon>
+              <mat-hint style="color: red;">{{ bErrorEmailRepetido == true ? msgErrorEmailRepetido : '' }}</mat-hint>
             </mat-form-field>
           </div>
         </div>
 
-        <div class="col-xs-12 center">
-          <mat-form-field class="full-width" color="accent">
-            <mat-label id="telefono">Teléfono de contacto (preferiblemente celular)</mat-label>
-            <input matInput [(ngModel)]="telefono" type="text" required [ngModelOptions]="{standalone: true}">
-            <mat-icon matSuffix>call</mat-icon>
-          </mat-form-field>
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
+            <mat-form-field class="full-width" color="accent">
+              <mat-label id="telefono">Teléfono de contacto (preferiblemente celular)</mat-label>
+              <input matInput [(ngModel)]="telefono" type="text" required [ngModelOptions]="{standalone: true}">
+              <mat-icon matSuffix>call</mat-icon>
+            </mat-form-field>
+          </div>
         </div>
 
-        <div class="row justify-content-xs-center">
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="ciudad">Ciudad</mat-label>
               <input matInput [(ngModel)]="ciudad" type="text" [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>public</mat-icon>
             </mat-form-field>
           </div>
+        </div>
 
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="direccion">Dirección</mat-label>
               <input matInput [(ngModel)]="direccion" type="text" [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>edit_location</mat-icon>
             </mat-form-field>
           </div>
+        </div>
 
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="info">Info extra sobre tí (grado, cargo, intereses, etc.)</mat-label>
               <textarea matInput rows="2" [(ngModel)]="info" [ngModelOptions]="{standalone: true}"></textarea>
               <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
             </mat-form-field>
           </div>
+        </div>
 
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12">
+            <mat-label id="nombre">Elija qué papel desempeñará en Profit Takers</mat-label><br/>
+            <mat-radio-group aria-label="Elija qué papel desempeñará en Profit Takers" [(ngModel)]="rol" [ngModelOptions]="{standalone: true}">
+              <mat-radio-button value="i">Inversionista (Trading)</mat-radio-button>
+              <mat-radio-button value="e">Estudiante (Academia)</mat-radio-button>
+            </mat-radio-group>
+          </div>
+        </div>
+
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <span class="subtitulo2">Prueba que no eres un robot:</span>
             <br/>
             Resuelve esta operación matemática
           </div>
-          
-          <div class="col-xs-12 center">
+        </div>
+
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <div style="display: inline; font-size: 40px;">
               <mat-icon matSuffix style="font-size: 40px;">{{ op1 }}</mat-icon>
               &nbsp;&nbsp;
@@ -106,26 +128,32 @@
               = 
             </div>
             <div style="display: inline;">
-              <mat-form-field color="accent" style="width: 40px; font-size: 18px;">
+              <mat-form-field color="accent" style="width: 50px; font-size: 18px;">
                 <input matInput [(ngModel)]="operacion" type="number" required [ngModelOptions]="{standalone: true}">
               </mat-form-field>
             </div>
           </div>
+        </div>
 
-          <div class="col-xs-12 footerApp">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 footerApp">
             *Al registrarse en nuestro sistema, su Usuario quedará en estado 'INACTIVO' 
             hasta que uno de nuestros Administradores avale su registro. 
             Una vez aprobado, recibirá una notificación de parte nuestra con su contraseña temporal.
           </div>
+        </div>
 
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <br/>
             <button mat-raised-button (click)="solicitarCuenta()" color="accent"><b>Solicitar cuenta en Profit Takers</b></button>
           </div>
+        </div>
 
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <br/>
-            <a href (click)="$event.preventDefault();goLogin();">Cancelar</a>
+            <a href (click)="$event.preventDefault();goLogin();" style="color: red;">Cancelar</a>
           </div>
         </div>
       </form>
