--- a/src/app/admin/create-trading/create-trading.component.html
+++ b/src/app/admin/create-trading/create-trading.component.html
@@ -13,22 +13,30 @@
           <br/><br/>
         </div>
         <div class="col-md-12">
-          <span class="pExplain">
+          <span class="pExplainmINI">
             Como Administrador del Sistema Profit Takers podr&aacute;
-            crear una <b>Movimientos</b>.
+            crear <b>Movimientos</b>.
             Un Movimiento afectar&aacute; el balance de una <b>Cuenta</b> 
-            la cual est&aacute; en un &uacute;nico <b>Contrato</b>.
+            la cual puede estar relacionada a uno o m&aacute;s <b>Contratos</b>.
+            <ul>
+              <li>Los <b>Movimientos</b> son operaciones Trading realizadas sobre una Cuenta.</li>
+              <li>Ser&aacute; el deber de alg&uacute;n Administrador actualizar las operaciones Trading en este sistema.</li>
+            </ul>
           </span>
-          <br/><br/>
         </div>
       </div>
     </mat-card-header>
     <mat-card-content>
       <form class="full-form profile-form">
 
-        <div class="row justify-content-xs-center">
+        <div class="row" *ngIf="accounts.length == 0">
+          <div class="col center">
+            <mat-spinner color="accent"></mat-spinner>
+          </div>
+        </div>
 
-          <div class="col-xs-12 center">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <!-- 
               <mat-label id="fecha">Fecha del Movimiento</mat-label>
@@ -41,90 +49,125 @@
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
           </div>
+        </div>
 
-          <hr/>
+        <hr/>
 
-          <div class="col-xs-12 center">
-            <br/>
+        <div class="row">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label>Cuenta: Elegir una</mat-label>
-              <mat-select [(ngModel)]="Cuenta" (selectionChange)="selectedContract(Cuenta)" required><!-- el color de letra lo da la clase .mat-select-value -->
-                <mat-option value="A">Cuenta C001 - descripcion</mat-option>
-                <mat-option value="B">Cuenta C002 - descripcion</mat-option>
-                <mat-option value="C">Cuenta C003 - descripcion</mat-option>
+              <mat-select required><!-- el color de letra lo da la clase .mat-select-value -->
+                <ng-container *ngFor="let acc of accounts">
+                  <mat-option *ngIf="acc.estatusActivo == true" value="{{ acc.id }}" (click)="selectedAccount(acc.id)">
+                    {{ acc.nombre }} ({{ acc.descripcion }})
+                  </mat-option>
+                </ng-container>
               </mat-select>
               <mat-icon matSuffix>account_balance</mat-icon>
             </mat-form-field>
           </div>
+        </div>
 
-          <div class="col-xs-12 infoPanelGris">
-            <b>Cr&eacute;dito disponible:</b> $ {{ this.available }}
-            <br/><br/>
-            <b>Contratos vinculados a esta Cuenta:</b> {{ this.account }}
+        <div class="row infoPanelGris">
+          <div class="col-12">
+            <b>Saldo disponible en Cuenta:</b>
           </div>
+          <div class="col-4 center">
+            USD <br/> $ {{ accountAvailableUSD | number: '1.2-2' }}
+          </div>
+          <div class="col-4 center">
+            EUR <br/> € {{ accountAvailableEUR | number: '1.2-2' }}
+          </div>
+          <div class="col-4 center">
+            COP <br/> $ {{ accountAvailableCOP | number: '1.2-2' }}
+          </div>
+          <div class="col-12">
+            <br/>
+            <b>Contratos vinculados a esta Cuenta:</b>
+            <ul *ngIf="accountSelectedContracts.length > 0">
+              <li *ngFor="let contrato of accountSelectedContracts">
+                <a href (click)="$event.preventDefault(); verMasDetalles(contrato.id)" matTooltipPosition="below"
+                 matTooltip="Click aquí para ver más detalles" aria-label="Click aquí para ver más detalles">
+                  {{ contrato.nombre }}
+                </a>
+                (status: {{ contrato.estatusActivo == true ? 'Activo' : 'Inactivo' }}) 
+                Nº Inversionistas: <b>{{ contrato.inversionistas.length }} </b>
+              </li>
+            </ul>
+            
+          </div>
+        </div>
 
-          <hr/>
+        <br/>
+        <hr/>
 
-          <div class="col-xs-12 center">
+        <div class="row">
+          <div class="col-sm-12 rights">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="expense">D&eacute;bito</mat-label>
-              <input matInput [(ngModel)]="expense" name="expense" type="number">
+              <input matInput [(ngModel)]="debito" name="expense" type="number" [ngModelOptions]="{standalone: true}"
+               on-focus="focusOperacion()" on-focusout="focusOperacion()">
               <mat-icon matSuffix>monetization_on</mat-icon>
             </mat-form-field>
           </div>
+        </div>
 
-          <div class="row">
-            <div class="col-xs-12">
-              <mat-radio-group aria-label="Elija un movimiento" color="warn">
-                <mat-radio-button value="menos">Negativo (-)</mat-radio-button>
-                <mat-radio-button value="mas" checked="checked">Positivo (+)</mat-radio-button>
-              </mat-radio-group>
-            </div>
-          </div>
-          
-          <br/>
-
-          <div class="col-xs-12 infoPanelGris">
-            <b>Resultado de la Operaci&oacute;n:</b> {{ this.available - this.expense }}
-          </div>
-
-          <div class="col-xs-12">
-            <br/>
+        <div class="row">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
-              <mat-label id="nombre">Clientes</mat-label>
-              <input matInput [(ngModel)]="clientes" name="clientes" type="text">
-              <mat-icon matSuffix>local_atm</mat-icon>
+              <mat-label>En qué Moneda...</mat-label>
+              <mat-select [(ngModel)]="currency" required [ngModelOptions]="{standalone: true}" on-focus="focusOperacion()" on-focusout="focusOperacion()"><!-- el color de letra lo da la clase .mat-select-value -->
+                <mat-option value="USD">USD ($ - U.S. Dólares)</mat-option>
+                <mat-option value="EUR">EUR (€ - Euros)</mat-option>
+                <mat-option value="COP">COP ($ - Pesos Colombianos)</mat-option>
+              </mat-select>
+              <mat-icon matSuffix>euro_symbol</mat-icon>
             </mat-form-field>
           </div>
+        </div>
 
-          <div class="col-xs-12">
-            <mat-form-field class="full-width" color="accent">
-              <mat-label id="nombre">Profit Takers</mat-label>
-              <input matInput [(ngModel)]="clientes" name="clientes" type="text" placeholder="Total del Movimiento">
-              <mat-icon matSuffix>exposure</mat-icon>
-            </mat-form-field>
-          </div>
+        <br/>
 
-          <hr/>
-          
-          <div class="col-xs-12">
+        <div class="row">
+          <div class="col-sm-12 infoPanelGris">
+            <b>Resultado de la Operaci&oacute;n:</b>
             <br/>
-            <u>Nota:</u> Este Movimiento tomar&aacute; efecto inmediatamente sobre el Contrato y sus Inversionistas seg&uacute;n sus Porcentajes asignados.
+            {{ calculoOperacionUSD | number: '1.2-2' }}
+            <br/>
+            {{ calculoOperacionEUR | number: '1.2-2' }}
+            <br/>
+            {{ calculoOperacionCOP | number: '1.2-2' }}
+            <br/>
+            <span class="footerApp" style="font-family: SFMono-Regular,Menlo,Monaco,Consolas,monospace;">
+              *Este cálculo de es generado automaticamente a manera informativa,
+              no tendrá efecto hasta que no pulse el botón 'Registrar Movimiento'.
+            </span>
+          </div>
+        </div>
+
+        <hr/>
+          
+        <div class="row">
+          <div class="col-sm-12">
+            <u>Nota:</u>
+            Este Movimiento tomar&aacute; efecto inmediatamente sobre la Cuenta y sus Inversionistas seg&uacute;n el Porcentaje asignado.
+            <i>Puede demorar algunos segundos mientras crea/actualiza el Movimiento del día, la data necesaria para los Reportes y el saldo de la Cuenta seleccionada</i>.
             <br/><br/>
           </div>
           
-          <div class="col-xs-12 center">
+          <div class="col-sm-12 center">
             <button mat-raised-button (click)="newTrading()" color="accent"><b>Registrar Movimiento</b></button>
           </div>
 
-          <div class="col-xs-12 center">
+          <div class="col-sm-12 center">
             <br/>
             <a href (click)="$event.preventDefault();goHome();" class="href-red">Cancelar</a>
           </div>
-
-          <br/><br/><br/>
-
         </div>
+
+        <br/><br/><br/>
+
       </form>
     </mat-card-content>
   </mat-card>
