--- a/src/app/admin/payments/payments.component.html
+++ b/src/app/admin/payments/payments.component.html
@@ -7,12 +7,18 @@
 
   <mat-card class="card-person">
     <mat-card-header style="font-size: 18px;">
-      Reporte: Pagos a la Academia
+      Ver/Certificar Pagos
     </mat-card-header>
-    <mat-card-content class="center">
+    <mat-card-content class="">
       <br/>
-      Ver los Pagos realizados para la Academia. Podr&aacute; filtrar 
-      la tabla por las siguientes opciones:
+      Ver los Pagos (giros, transferencias) de los Usuarios (Inversionistas o Estudiantes de la Academia)
+      registrados en el Sistema. 
+      <span style="color: #f35e5e;">Como <b>Administrador</b> ud. podr&aacute; <b>Certificar</b></span>
+      un pago (una vez que haya comprobado personalmente que el pago fue correcto)
+      a trav&eacute; del bot&oacute;n 
+      <span style="color: #f35e5e;">switch</span> 
+      de la derecha en cada Pago. 
+      Podr&aacute; filtrar la tabla por las siguientes opciones:
       <br/><br/>
       <mat-radio-group aria-label="Elija un movimiento" color="warn">
         <mat-radio-button value="menos" checked="checked">&Uacute;ltima semana</mat-radio-button>
@@ -30,48 +36,81 @@
       </mat-form-field>
 
       <mat-form-field class="full-width" color="accent">
-          <mat-label>Hasta</mat-label>
-          <input matInput [matDatepicker]="picker2" placeholder="Hasta" name="until" [(ngModel)]="until" class="inputRight">
-          <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-          <mat-datepicker #picker2></mat-datepicker>
-        </mat-form-field>
-
+        <mat-label>Hasta</mat-label>
+        <input matInput [matDatepicker]="picker2" placeholder="Hasta" name="until" [(ngModel)]="until" class="inputRight">
+        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2></mat-datepicker>
+      </mat-form-field>
     </mat-card-content>
+    
+    <mat-card-actions class="full-width center">
+      <button mat-raised-button (click)="filtrar()" color="accent"><b>Buscar / Filtrar</b></button>
+    </mat-card-actions>
   </mat-card>
+
+  <div class="row" *ngIf="dataSource.length == 0">
+    <div class="col center">
+      <mat-spinner color="accent"></mat-spinner>
+    </div>
+  </div>
 
   <mat-card class="card-person-actions">
     <mat-card-header>
-      <div class="row justify-content-xs-center">
-        <div class="col-xs-12 center">
+      <div class="row justify-content-sm-center">
+        <div class="col-sm-12 center">
           <span class="subtitulo">Resultado:</span>
         </div>
-        <div class="col-xs-12 center"><br/></div>
+        <div class="col-sm-12 center"><br/></div>
       </div>
     </mat-card-header>
     <mat-card-content>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%;">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 tableResults">
 
         <ng-container matColumnDef="fecha">
           <th mat-header-cell *matHeaderCellDef class="center"> Fecha </th>
-          <td mat-cell *matCellDef="let element" class="center"> {{element.fecha}} </td>
+          <td mat-cell *matCellDef="let element" style="text-align: left;"> {{ element.fecha }} </td>
         </ng-container>
       
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Usuario </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          <td mat-cell *matCellDef="let element"> {{ getUserName( element.idUser ) }} </td>
         </ng-container>
       
         <ng-container matColumnDef="monto">
-          <th mat-header-cell *matHeaderCellDef class="center"> Monto/Pago </th>
-          <td mat-cell *matCellDef="let element" class="center"> {{element.monto}} </td>
+          <th mat-header-cell *matHeaderCellDef class="center"> Monto </th>
+          <td mat-cell *matCellDef="let element" class="center pointer"
+           (click)="seePayment(element.id, element.idFile, element.fileName, element.concepto, element.banco, element.currency, element.monto, element.idUser);"
+           matTooltip="Click aquí para ver más detalles" aria-label="Click aquí para ver más detalles"
+           matTooltipPosition="below">
+            <span style="color: #0768ff;">
+              {{ element.currency == 'USD' || element.currency == 'COP' ? '$' : '€' }} 
+              {{ element.monto | number: '1.2-2' }}
+            </span>
+          </td>
         </ng-container>
     
         <ng-container matColumnDef="link">
-            <th mat-header-cell *matHeaderCellDef class="center"> Imagen </th>
-            <td mat-cell *matCellDef="let element" class="center pointer" (click)="seePayment(element.id);">
-              <mat-icon>fullscreen</mat-icon>
-            </td>
-          </ng-container>
+          <th mat-header-cell *matHeaderCellDef class="center"> Banco </th>
+          <td mat-cell *matCellDef="let element"> {{ element.banco }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="u1">
+          <th mat-header-cell *matHeaderCellDef class="center"> Destino </th>
+          <td mat-cell *matCellDef="let element" class="center"> {{ element.destino }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="u2">
+          <th mat-header-cell *matHeaderCellDef class="center"> ¿Aprobar? </th>
+          <td mat-cell *matCellDef="let element" class="center">
+            <mat-slide-toggle aria-labelledby="label" [id]="element.id" color="accent" [disabled]="false"
+              (change)="toogleConfirmar(element.id, $event)"
+              [checked]="element.aprobado == true"
+              [matTooltip]="(element.aprobado == false) ? 'Pendiente por confirmar' : 'Confirmado/Certificado el pago'" 
+              [aria-label]="(element.aprobado == false) ? 'Pendiente por confirmar' : 'Confirmado/Certificado el pago'"
+              matTooltipPosition="below">
+            </mat-slide-toggle>
+          </td>
+        </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -89,10 +128,11 @@
   </mat-card>
 
   <div class="row justify-content-md-center">
-    <div class="col-xs-12">
-      *resultados según el filtro de la parte superior.
+    <div class="col-sm-12">
+      &nbsp;&nbsp;&nbsp;
+      *Resultados según el filtro de la parte superior.
     </div>
-    <div class="col-xs-12 center">
+    <div class="col-sm-12 center">
       <br/>
       <a href (click)="$event.preventDefault();goHome();" class="href-red">Volver</a>
     </div>
